基础：1、ai处理文件